<resources>
    <string name="app_name">gattApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">gattClient</string>
    <string name="nav_header_subtitle">for E-Meter communication</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_select">Select</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_share">Save to file</string>
    <string name="menu_item0">Measure chart</string>
    <string name="menu_item1">Profile chart</string>
    <string name="menu_item2">Detail data</string>
    <string name="menu_item3">Maintenance</string>
    <string name="menu_item4">Customize</string>
    <string name="menu_item5">Setup</string>
    <string name="meter_state">Data</string>
    <string name="check_calib">State</string>
    <string name="demand_reset">Demand Reset</string>
    <string name="billing_data">Bill</string>
    <string name="power_quality">Event</string>
    <string name="load_profile">Load</string>
    <string name="ampere_profile">Current</string>
    <string name="clock_setting">SET Clock</string>
    <string name="filter_setting">Filter</string>
    <string name="bd_reset">CLR Bill</string>
    <string name="pq_reset">CLR Event</string>
    <string name="load_reset">CLR Load</string>
    <string name="amp_reset">CLR Current</string>
    <string name="item2_button1">Imp-Exp/ABS/NET</string>
    <string name="item2_button2">MN-ON</string>
    <string name="item2_button3">MN-OFF</string>
    <string name="item2_button4">CHECK</string>
    <string name="item2_button5">button5</string>
    <string name="item2_button6">button6</string>
    <string name="item2_button7">button7</string>

    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>

    <string name="session">Session</string>
    <string name="release">Release</string>
    <string name="global_key">global key setting</string>
    <string name="password">password setting</string>

    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_scanning">Scanning</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="btn_scan_description">Scan for devices</string>
    <string name="btn_disconnect_description">Disconnect from device</string>
</resources>