<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_item2">

    <fragment
        android:id="@+id/nav_item0"
        android:name="com.example.gattApp.ui.Item0Fragment"
        android:label="@string/menu_item0"
        tools:layout="@layout/fragment_item0" />

    <fragment
        android:id="@+id/nav_item1"
        android:name="com.example.gattApp.ui.Item1Fragment"
        android:label="@string/menu_item1"
        tools:layout="@layout/fragment_item1" />
    <fragment
        android:id="@+id/nav_item2"
        android:name="com.example.gattApp.ui.Item2Fragment"
        android:label="@string/menu_item2"
        tools:layout="@layout/fragment_item2" />
    <fragment
        android:id="@+id/nav_item3"
        android:name="com.example.gattApp.ui.Item3Fragment"
        android:label="@string/menu_item3"
        tools:layout="@layout/fragment_item3" />
    <fragment
        android:id="@+id/nav_item4"
        android:name="com.example.gattApp.ui.Item4Fragment"
        android:label="@string/menu_item4"
        tools:layout="@layout/fragment_item4" />
    <fragment
        android:id="@+id/nav_item5"
        android:name="com.example.gattApp.ui.Item5Fragment"
        android:label="@string/menu_item5"
        tools:layout="@layout/fragment_item5" />
</navigation>